feat: make more commands unqueued  - Effectively fixes the very specific "issue" in #2223 I guess  - Use this opportunity to clean up the command classes a bit